--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   },
   "devDependencies": {
     "@types/diff": "^5.2.1",
-    "@types/vscode": "^1.55.0",
     "@types/node": "^14.14.37",
+    "@types/vscode": "^1.55.0",
+    "esbuild": "^0.12.9",
     "typescript": "^4.2.3",
-    "vscode-test": "^1.5.0",
-    "esbuild": "^0.12.9"
+    "vscode-test": "^1.5.0"
   },
   "dependencies": {
     "clipboardy": "^2.3.0",
-    "diff": "^5.0.0"
+    "diff": "^5.0.0",
+    "simple-git": "^3.27.0"
   },
   "contributes": {
     "commands": [
@@ -31,15 +32,16 @@
         "title": "Apply Clipboard Patch (Commit)",
         "keybindings": [
           {
-              "key": "shift+cmd+[IntlBackslash]"
+            "key": "shift+cmd+[IntlBackslash]"
           }
-      ]},
+        ]
+      },
       {
         "command": "extension.applyClipboardPatchAndStage",
         "title": "Apply Clipboard Patch (Stage)",
         "keybindings": [
           {
-              "key": "cmd+[IntlBackslash]"
+            "key": "cmd+[IntlBackslash]"
           }
         ]
       }
